GNOME Bugzilla – Bug 795932
uridecodebin3: Fix string leak
Last modified: 2018-05-08 15:58:39 UTC
uri and suburi should be free'd
Created attachment 371806 [details] [review] uridecodebin3: Fix string leak
Thanks! commit 12694200d526effad49f7dfd9696b859766f8b5a Author: Seungha Yang <seungha.yang@navercorp.com> Date: Tue May 8 23:44:38 2018 +0900 uridecodebin3: Fix string leak uri and suburi should be free'd https://bugzilla.gnome.org/show_bug.cgi?id=795932