uridecodebin3: Fix string leak

uri and suburi should be free'd

https://bugzilla.gnome.org/show_bug.cgi?id=795932